--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,18 +17,14 @@
     <string name="multiplicacion">MULTIPLICACIÓN</string>
     <string name="potencia">POTENCIA</string>
     <string name="se_ha_iniciado_sesion_como">Se ha iniciado sesion como</string>
-    <string name="err_campo_invalido">Se han ingreado campos vacios o valores invalidos</string>
+    <string name="err_campo_invalido">Se han ingresado campos vacios o valores invalidos</string>
     <string name="shared_pref_login" translatable="false">_shared_pref_login</string>
     <string name="pref_current_user" translatable="false">_pref_current_user</string>
     <string name="pref_current_password" translatable="false">_pref_current_password</string>
-    <string name="placa">Placa</string>
-    <string name="modelo">Modelo</string>
     <string name="direccion_infraccion">Direccion de la infraccion</string>
-    <string name="tipo_comparendo">Tipo</string>
-    <string name="cedula_infractor">Cedula</string>
     <string name="guardar">Guardar</string>
     <string name="eliminar">Eliminar</string>
-    <string name="correo">Correo</string>
+    <string name="email">Correo</string>
     <string name="contraseña">Contraseña</string>
     <string name="iniciar_sesion">Iniciar sesion</string>
     <string name="cerrar_sesion">Cerrar sesion</string>
@@ -37,4 +33,17 @@
     <string name="terms_and_conditions">Terminos y condiciones</string>
     <string name="forgot_password">Olvidé mi contraseña</string>
     <string name="register">Registro</string>
+    <string name="firstname">Nombre</string>
+    <string name="lastname">Apellido</string>
+    <string name="genre">Género</string>
+    <string name="email_invalid">Correo inválido</string>
+    <string name="password_invalid">La contraseña debe tener al menos 6 carácteres</string>
+    <string name="verification_code">Código de verificación</string>
+    <string name="validate">Validar</string>
+    <string name="send_code">Enviar Código</string>
+    <string name="code_invalid">El código es inválido</string>
+    <string name="code_sended">Un código ha sido enviado al correo electronico ingresado</string>
+    <string name="confirm_password">Confirmar contraseña</string>
+    <string name="update_password">Reestablecer contraseña</string>
+    <string name="password_no_match">Las contraseñas no coinciden</string>
 </resources>
